# SeminarOnMainMemoryDatabases-LogisticAndLinearRegressionInSQL

./: README.md
GradientDescent/: CMakeLists.txt
GradientDescent/data/: waiter.csv
GradientDescent/inc/: CSVIterator.h  CSVRow.h
GradientDescent/src/: main.cpp
Tex/: Ausarbeitung.tex
